--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,7 +35,9 @@
     "react-tinder-card": "^1.6.4",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.4.3",
