--- a/apps/web/ios/App/App/Info.plist
+++ b/apps/web/ios/App/App/Info.plist
@@ -45,5 +45,30 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<!-- App Transport Security: allow localhost during development for Vite dev server -->
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>localhost</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
+	<!-- Required usage descriptions for Camera, Photos, and Location -->
+	<key>NSCameraUsageDescription</key>
+	<string>This app uses the camera to let you take profile photos.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app saves selected photos to your library when needed.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to your photos for profile images.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location is used to improve match discovery based on proximity.</string>
 </dict>
 </plist>
